add onboarding to admin

--- a/onboarding/templates/onboarding.html
+++ b/onboarding/templates/onboarding.html
@@ -9,7 +9,8 @@
     <p>ПРОПУСТИТЬ</p>
   </div>
   <div>
-    <img src="{{image}}">
+    {% load static %}
+    <img src="{{ image.url }}">
   </div>
   <div>
     <p>{{text}}</p>
