--- a/surfers/templates/login.html
+++ b/surfers/templates/login.html
@@ -4,7 +4,7 @@
   </head>
   <body>
       <center>
-      <script async src="https://telegram.org/js/telegram-widget.js?4" data-telegram-login="sunmapbot" data-size="large" data-auth-url="https://{{ request.get_host }}{% url "social:complete" "telegram" %}" data-request-access="write"></script>
+      <script async src="https://telegram.org/js/telegram-widget.js?4" data-telegram-login="{{ settings.TGAUTH_BOT }}" data-size="large" data-auth-url="https://{{ request.get_host }}{% url "social:complete" "telegram" %}" data-request-access="write"></script>
       <div id="fb-root"></div>
       <script>(function(d, s, id) {
           if (d.getElementById(id)) return;
@@ -22,7 +22,7 @@
            data-width="200"
            data-max-rows="1"
            data-size="large" data-button-type="login_with" data-show-faces="false"
-           data-auto-logout-link="true" data-use-continue-as="false"></div>
+           data-auto-logout-link="false" data-use-continue-as="false"></div>
       </center>
   </body>
 </html>
