--- a/surfers/templates/login.html
+++ b/surfers/templates/login.html
@@ -4,7 +4,10 @@
   </head>
   <body>
       <center>
-      <script async src="https://telegram.org/js/telegram-widget.js?4" data-telegram-login="{{ settings.TGAUTH_BOT }}" data-size="large" data-auth-url="https://{{ request.get_host }}{% url "social:complete" "telegram" %}" data-request-access="write"></script>
+      <script async src="https://telegram.org/js/telegram-widget.js?4"
+          data-telegram-login="{{ tgauth_bot }}" data-size="large"
+          data-auth-url="https://{{ request.get_host }}{% url "social:complete" "telegram" %}"
+          data-request-access="write"></script>
       <div id="fb-root"></div>
       <script>(function(d, s, id) {
           if (d.getElementById(id)) return;
