--- a/surfers/templates/sunmap.html
+++ b/surfers/templates/sunmap.html
@@ -1,3 +1,4 @@
+{% load static %}
 <html>
 
 <head>
@@ -13,38 +14,36 @@
 </head>
 
 <body>
-	<div id='map'></div>
-	<script>
+    <div id='map'></div>
+    <script>
 
 mapboxgl.accessToken = "{{ mapbox_token }}";
 
 var map = new mapboxgl.Map({
-	container: "map",
-	style: "mapbox://styles/mapbox/streets-v9"
+    container: "map",
+    //style: "mapbox://styles/mapbox/streets-v10"
+    style: "{% static "basic-v9.json" %}"
 });
 
 map.on("load", function() {
 
-	map.addSource("points", {
+    map.addSource("points", {
         type: 'geojson',
-		data: "{% url "latest_geojson" %}",
+        data: "{% url "surfers:latest_geojson" %}",
         cluster: true
-	});
+    });
 
     map.addLayer({
         "id": "unclustered-points",
         "type": "symbol",
         "source": "points",
         "layout": {
-			"icon-image": "star-15",
+            "icon-image": "marker-15",
+            "icon-anchor": "bottom",
             "text-field": "{user}",
-            "text-font": [
-                "DIN Offc Pro Medium",
-                "Arial Unicode MS Bold"
-            ],
-            "text-offset": [0, 0.6],
-            "text-anchor": "top"
-		}
+            "text-anchor": "bottom",
+            "text-offset": [0, -1.2],
+        }
     });
 
 
@@ -87,7 +86,7 @@ map.on("load", function() {
     });
 
 });
-	</script>
+    </script>
 </body>
 
 </html>
